python-tooz (1.21.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 12:16:04 +0000

python-tooz (1.21.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Fixed MySQLd runs in unit tests.
  * Disabled Py3 tests as it fails in concurrent.futures.

 -- Thomas Goirand <zigo@debian.org>  Thu, 06 Aug 2015 07:56:31 +0000

python-tooz (0.13.1-2) unstable; urgency=medium

  * Do not test using redis-server: it seems there's issues with it.

 -- Thomas Goirand <zigo@debian.org>  Wed, 06 May 2015 11:02:28 +0200

python-tooz (0.13.1-1) unstable; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Reworked the way to run unit tests.
  * Running tests with MySQL and PGSQL server.
  * Also runs memcached tests.
  * Also runs redis-server tests.
  * Sets homepage.

 -- Thomas Goirand <zigo@debian.org>  Wed, 06 May 2015 07:30:13 +0000

python-tooz (0.4-1) unstable; urgency=medium

  * New upstream release.
  * Replaced (build-)depends of python-posix-ipc by python-sysv-ipc.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Sep 2014 08:52:36 +0000

python-tooz (0.3-3) unstable; urgency=medium

  * Only kill memcached if the packaging script started it.
  * Also cleans .testrepository on clean.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Sep 2014 08:03:50 +0000

python-tooz (0.3-2) unstable; urgency=medium

  * Check if memcached is started before building, start it if it isn't. Thanks
    to Lucas Nussbaum for the bug report. (Closes: #759976)

 -- Thomas Goirand <zigo@debian.org>  Mon, 01 Sep 2014 02:06:47 +0000

python-tooz (0.3-1) unstable; urgency=medium

  * Initial release. (Closes: #758138)

 -- Thomas Goirand <zigo@debian.org>  Thu, 14 Aug 2014 21:57:41 +0800