@@ -1,3 +1,2 @@
 version=3
-http://pypi.python.org/packages/source/t/tooz tooz-(.*).tar.gz
-
+https://github.com/openstack/tooz/tags .*/(\d[\d\.]+)\.tar\.gz
